@startuml
'DER - Entidades e Relacionamentos (Biblioteca)'
hide circle
entity autores {
  * id_autor : INT <<PK>>
  --
  nome : VARCHAR(255)
  nacionalidade : VARCHAR(100)
}

entity livros {
  * id_livro : INT <<PK>>
  --
  titulo : VARCHAR(255)
  isbn : VARCHAR(50)
  ano_publicacao : INT
  quantidade_total : INT
  quantidade_disponivel : INT
}

entity livro_autor {
  * id_livro : INT <<PK,FK>>
  * id_autor : INT <<PK,FK>>
}

entity usuarios {
  * id_usuario : INT <<PK>>
  --
  nome : VARCHAR(255)
  email : VARCHAR(255)
  telefone : VARCHAR(50)
}

entity emprestimos {
  * id_emprestimo : INT <<PK>>
  --
  id_usuario : INT <<FK>>
  id_livro : INT <<FK>>
  data_emprestimo : DATE
  data_devolucao_prevista : DATE
  data_devolucao_real : DATE
  status : VARCHAR(20)
}

autores ||--o{ livro_autor : "possui"
livros ||--o{ livro_autor : "tem"
usuarios ||--o{ emprestimos : "realiza"
livros ||--o{ emprestimos : "é emprestado em"

note right of emprestimos
  Regras de negócio (exemplos):
  - Não emprestar se `quantidade_disponivel` = 0
  - Ao emprestar, decrementar `quantidade_disponivel`
  - Ao devolver, incrementar `quantidade_disponivel`
end note

@enduml
